adding primitive touch controls
press and drag on the edges of the screen to move the character, tap to
progress the dialogue. also works with the mouse. you will still need to
press the spacebar to interact at the moment

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<!-- imports -->
 		<script type="text/javascript" src="libs/Iuppiter.js"></script>
 		<script type="text/javascript" src="libs/modernizr.js"></script>
+		<script type="text/javascript" src="libs/hammer.js"></script>
+		<script type="text/javascript" src="libs/PreventGhostClick.js"></script>
 		<script type="text/javascript" src="src/Sburb.js"></script>
 		
 		<script type="text/javascript" src="src/Sprite.js"></script>
@@ -29,8 +31,8 @@
 		<script type="text/javascript" src="src/ActionQueue.js"></script>
 		
 	</head>
-	
-	<body onload="Sburb.initialize('SburbDeploy','levels/init.xml','true');">
+
+	<body onload="Sburb.initialize('SburbDeploy','levels/init.xml','true');" oncontextmenu="return false;">
 		<div id="SburbDeploy" ></div>
 		<noscript>Your browser does not appear to support javascript, which this content requires</noscript>
 	</body>
