--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<script type="text/javascript" src="libs/modernizr.js"></script>
 		<script type="text/javascript" src="libs/hammer.js"></script>
 		<script type="text/javascript" src="libs/PreventGhostClick.js"></script>
+		<script type="text/javascript" src="libs/screenfull.js"></script>
 		<script type="text/javascript" src="src/Sburb.js"></script>
 		
 		<script type="text/javascript" src="src/Sprite.js"></script>
@@ -32,8 +33,16 @@
 		
 	</head>
 
-	<body onload="Sburb.initialize('SburbDeploy','levels/init.xml','true');" oncontextmenu="return false;">
-		<div id="SburbDeploy" ></div>
+	<body onload="Sburb.initialize('SburbDeploy','levels/init.xml','true');" oncontextmenu="return false;" style="margin:0;">
+		<div id="SburbDeploy"></div>
 		<noscript>Your browser does not appear to support javascript, which this content requires</noscript>
+		<button id="fullscreenLink">fullscreen me</button>
+		<script>
+document.getElementById('fullscreenLink').addEventListener('click', () => {
+    if (screenfull.enabled) {
+        screenfull.request(document.getElementById('SburbDeploy'));
+    }
+});
+</script>
 	</body>
 </html>
