adding howler import

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<script type="text/javascript" src="libs/hammer.js"></script>
 		<script type="text/javascript" src="libs/PreventGhostClick.js"></script>
 		<script type="text/javascript" src="libs/screenfull.js"></script>
+		<script type="text/javascript" src="libs/howler.core.js"></script>
 		<script type="text/javascript" src="src/Sburb.js"></script>
 		
 		<script type="text/javascript" src="src/Sprite.js"></script>
